# python-project-83

./: .flake8  .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: .env  .env.sample  __init__.py  app.py  config.py  database.sql  database_utils.py  func.py  html_parser.py  urls.py
page_analyzer/templates/: flashes.html  header.html  index.html  layout.html  urls.html  urls_id.html
