[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["danlo <danlo12@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
flask = "^3.0.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
